[package]
name = "compressible_aero_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.112"
plotters ="0.3.5"
